fixing spacing

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
   margin: 0 30px
   font-weight: 300;
   padding-top: 1em;
-  text-align: justify;}
+  text-align: left;}
 
 #description img {
 	    width: 180px;
@@ -26,7 +26,7 @@ body {
 
 
 a {
-  word-spacing:-4px;
+  word-spacing:0px;
   outline: 0;
   color: #000;
   text-decoration: underline;
